Fix search command related issue